frontend/test/should_fail/index_asArrayDescending_edge_fromto_argument2_mismatch.grg
#using "index_edge_where_non_index_expected_model.gm"

rule i {
	if{ edgesFromIndexFromToAsArrayDescending(fooi, 42, 42.0).size() > 0; }
	
	modify {
	}
}
